# EasyHarness

./: .gitignore  LICENSE  README.md  pyproject.toml
.architect/tool-context-contract-hardening/: 00-plan-manifest.md  01-context-and-contract.md  02-design-catalog.md  04-impact-and-boundaries.md  05-task-catalog.md  07-verification-plan.md  08-execution-log.md
.architect/tool-context-contract-hardening/.state/: execution-state.json
.architect/tool-context-contract-hardening/03-designs/: D-001-reject-empty-fixed-tuple-context.md  D-002-single-session-reentrancy-gate.md  D-003-restore-ruff-quality-gate.md
.architect/tool-context-contract-hardening/06-tasks/: T-001-reject-empty-tuple-context.md  (+2 more)
.architect/tool-context-contract-redesign/: 00-plan-manifest.md  01-context-and-contract.md  02-design-catalog.md  04-impact-and-boundaries.md  05-task-catalog.md  07-verification-plan.md  08-execution-log.md
.architect/tool-context-deep-contract/: 00-plan-manifest.md  01-context-and-contract.md  02-design-catalog.md  04-impact-and-boundaries.md  05-task-catalog.md  07-verification-plan.md  08-execution-log.md
.architect/tool-context-injection-v1/: 00-plan-manifest.md  01-context-and-contract.md  02-design-catalog.md  04-impact-and-boundaries.md  05-task-catalog.md  07-verification-plan.md  08-execution-log.md
easyharness/: __init__.py
easyharness/_internal/: __init__.py  conversation.py  model.py  runtime.py  tools.py  types.py
easyharness/toolset/: __init__.py  fileglide.py
tests/: test_base.py  test_context_window_resolution.py  test_sdk.py  教程.md  旧版本教程.md
(+93 files in other folders)
