[project]
name = "easyharness"
version = "0.1.0"
description = "A minimal Python SDK for agent loops, with streaming events, clean tool contracts, and zero ceremony."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.75.9,<=1.89.3",
    "prompt4py>=0.0.6",
    "vortezwohl>=0.1.3",
    "strands-agents-tools>=0.8.2",
    "strands-agents[litellm]>=1.45.0",
    "fileglide>=0.0.1",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["ANN", "ARG", "E", "F", "I"]
